<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FragmentShow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bat" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_arrow_back_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="26dp"
            app:iconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFavorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:visibility="invisible"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_favorite_border_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="26dp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="@drawable/back_solidblack_radiustop10"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPoster">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.90"
                tools:text="Godzilla vs. King Kong" />

            <TextView
                android:id="@+id/txtSummaryHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_header"
                android:text="@string/summary"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_show_header"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <TextView
                android:id="@+id/txtSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_info"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtSummaryHeader"
                tools:text="Summary" />

            <TextView
                android:id="@+id/txtGenresHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_header"
                android:text="@string/genres"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_show_header"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtSummary" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_info"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtGenresHeader" />

            <TextView
                android:id="@+id/txtOnTVHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_header"
                android:text="@string/on_tv"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_show_header"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/chipGroupGenres" />

            <TextView
                android:id="@+id/txtOnTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_info"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtOnTVHeader"
                tools:text="On TV" />

            <TextView
                android:id="@+id/txtEpisodesHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_header"
                android:text="@string/episodes"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_show_header"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/txtOnTV" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSeasons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:letterSpacing="0.02"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/season_1"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_arrow_down_24"
                app:iconGravity="end"
                app:iconPadding="10dp"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/txtEpisodesHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/txtEpisodesHeader"
                app:layout_constraintTop_toTopOf="@id/txtEpisodesHeader"
                app:layout_constraintWidth_percent="0.55" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recEpisodes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_info"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="@id/txtTitle"
                app:layout_constraintTop_toBottomOf="@id/btnSeasons"
                tools:itemCount="3"
                tools:listitem="@layout/rec_episodes" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>